// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentActivationCard should render when frequency type is batch 1`] = `
<div>
  <div
    class="card card-root card-root"
    id="container.report.segmentActivationCard"
  >
    <div
      class="card-header align-items-center d-flex justify-content-between"
    >
      <div
        class="card-title"
      >
        Activations
      </div>
    </div>
    <div
      class="card-body"
    >
      <ul
        class="list-group show-quick-actions-on-hover"
      >
        <li
          class="px-2 list-group-item list-group-item-flex"
        >
          <div
            class="autofit-col autofit-col-expand"
          >
            <p
              class="list-group-title mb-2"
            >
              Liferay DXP
            </p>
            <p
              class="mb-2 list-group-text"
            >
              This syncs individual profiles to Liferay DXP to deliver personalization via pages, collections, A/B tests, and recommendations.
            </p>
            <span
              class="label align-self-start label-info"
            >
              <span
                class="label-item label-item-expand"
              >
                Batch Sync Will Run Indefinitely
              </span>
            </span>
          </div>
          <div
            class="autofit-col"
          >
            <div
              class="quick-action-menu"
            >
              <button
                aria-label="Edit"
                class="component-action quick-action-item"
                data-testid="edit-activation-button"
                role="button"
                title="Edit"
              >
                <svg
                  class="lexicon-icon lexicon-icon-pencil"
                  role="presentation"
                >
                  <use
                    href="#pencil"
                  />
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SegmentActivationCard should render with dates when frequency type is between 1`] = `
<div>
  <div
    class="card card-root card-root"
    id="container.report.segmentActivationCard"
  >
    <div
      class="card-header align-items-center d-flex justify-content-between"
    >
      <div
        class="card-title"
      >
        Activations
      </div>
    </div>
    <div
      class="card-body"
    >
      <ul
        class="list-group show-quick-actions-on-hover"
      >
        <li
          class="px-2 list-group-item list-group-item-flex"
        >
          <div
            class="autofit-col autofit-col-expand"
          >
            <p
              class="list-group-title mb-2"
            >
              Liferay DXP
            </p>
            <p
              class="mb-2 list-group-text"
            >
              This syncs individual profiles to Liferay DXP to deliver personalization via pages, collections, A/B tests, and recommendations.
            </p>
            <span
              class="label align-self-start label-info"
            >
              <span
                class="label-item label-item-expand"
              >
                Batch Sync Will Run from Aug 24, 2025 to Sep 14, 2025
              </span>
            </span>
          </div>
          <div
            class="autofit-col"
          >
            <div
              class="quick-action-menu"
            >
              <button
                aria-label="Edit"
                class="component-action quick-action-item"
                data-testid="edit-activation-button"
                role="button"
                title="Edit"
              >
                <svg
                  class="lexicon-icon lexicon-icon-pencil"
                  role="presentation"
                >
                  <use
                    href="#pencil"
                  />
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
